@@ -29,6 +29,10 @@ Compilation:
 --------------
 The steps for compiling gImageReader from source are documented in the [wiki](https://github.com/manisandro/gImageReader/wiki/Compiling-gImageReader).
 
+Support:
+----------
+If you encounter issues, please file a ticket in the [issue tracker](https://github.com/manisandro/gImageReader/issues), or feel free to mail me directly at `manisandro(at)gmail(dot)com`. Be sure to also consult the [FAQ](https://github.com/manisandro/gImageReader/wiki/FAQ).
+
 Contributing:
 ---------------
 Contributions are always welcome, ideally in the form of pull-requests.
